# uzbek-text-norm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_core.py  test_score.py
uzbek_text_norm/: __init__.py  __main__.py  cli.py  core.py  manifest.py  score.py  training.py
